@@ -135,18 +135,6 @@ static int64_t inline calc_virt_pos(const line_desc * const ld, const int64_t co
 	return pos;
 }
 
-/* Returns true if the specified character is invariant on the left edge of re-wrapped paragraphs */
-/* This will require a re-think for leading non-space invariants. For now, always assume false. */
-static bool inline isparaspot(const int c) {
-	/*
-	char *spots = "%*#/>\t ";
-	char *p = spots;
-	while (*p) {
-		if (*p++ == c) return true;
-	} */
-	return false;
-}
-
 /* Returns true if the specified character is an US-ASCII whitespace character. */
 
 static bool inline isasciispace(const int c) {
