@@ -5,6 +5,8 @@ unreleased
   * Fixed visual glitch when characters spanning multiple columns are only
     partially displayed on the left side.
 
+  * Fixed PARAGRAPH command.
+
 3.1.1 2017-06-04
 
   * Fixed visual glitch when deleting characters from long lines.
